--- a/telepathy-qt4/trunk/PKGBUILD
+++ b/telepathy-qt4/trunk/PKGBUILD
@@ -1,21 +1,22 @@
 # $Id$
 # Maintainer: Ionut Biru <ibiru@archlinux.org>
+# Contributor: Andrea Scarpino <andrea@archlinux.org>
+
 pkgname=telepathy-qt4
-pkgver=0.5.15
+pkgver=0.5.16
 pkgrel=1
-pkgdesc="A library for Qt-based Telepathy clients."
+pkgdesc="A library for Qt-based Telepathy clients"
 arch=('i686' 'x86_64')
-url="http://telepathy.freedesktop.org"
+url="http://telepathy.freedesktop.org/wiki/"
 license=('LGPL')
 options=('!libtool')
 depends=('qt' 'telepathy-farsight')
 makedepends=('libxslt' 'python2' 'cmake')
-source=(http://telepathy.freedesktop.org/releases/$pkgname/$pkgname-$pkgver.tar.gz)
-md5sums=('2066d447a46ca3d767ff82ca562244a0')
+source=("http://telepathy.freedesktop.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.gz")
+md5sums=('82e36c051c74d323b329f69ac2c5427f')
 
 build() {
     cd "${srcdir}"
-
     mkdir build
     cd build
     cmake ../${pkgname}-${pkgver} \
@@ -26,5 +27,5 @@ build() {
 
 package() {
     cd "${srcdir}"/build
-    make DESTDIR="$pkgdir" install
+    make DESTDIR="${pkgdir}" install
 }
