upgpkg: kdeplasma-applets-networkmanagement git20110323-1 downgrade to a semi-working version
git-svn-id: file:///srv/repos/svn-packages/svn@122423 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeplasma-applets-networkmanagement/trunk/PKGBUILD
+++ b/kdeplasma-applets-networkmanagement/trunk/PKGBUILD
@@ -3,8 +3,9 @@
 # Contributor: Jakub Schmidtke <sjakub-at-gmail.com>
 
 pkgname=kdeplasma-applets-networkmanagement
-pkgver=git20110502
-_commit=fdb4edbc91f60d358d202a694c4ab229c66f9f61
+epoch=1
+pkgver=git20110323
+_commit=986cae8974998213496a8678ad03523dba83e69d
 pkgrel=1
 pkgdesc="KDE control panel and widget network connections"
 arch=('i686' 'x86_64')
@@ -14,10 +15,15 @@ depends=('kdebase-workspace' 'networkmanager')
 makedepends=('cmake' 'python2' 'automoc4' 'mobile-broadband-provider-info')
 optdepends=('mobile-broadband-provider-info: allow to add new mobile connection')
 install=${pkgname}.install
-source=("${pkgname}-${pkgver}.tar.gz"::"http://quickgit.kde.org/?p=networkmanagement.git&a=snapshot&h=${_commit}")
-md5sums=('6ac9e04cb917a8ac875b2bffde4b5420')
+source=("${pkgname}-${pkgver}.tar.gz"::"http://quickgit.kde.org/?p=networkmanagement.git&a=snapshot&h=${_commit}"
+        'nm-09.patch')
+md5sums=('3dc3b2631e0d4e4f578ef20f7802bf04'
+         'b7ad3dac9a5022c99dfd2ad0dc8549cb')
 
 build() {
+  cd "${srcdir}/networkmanagement"
+  patch -p1 -i "${srcdir}/nm-09.patch"
+
   cd "${srcdir}"
   mkdir build
   cd build
@@ -32,3 +38,5 @@ package() {
   cd ${srcdir}/build
   make DESTDIR=${pkgdir} install
 }
+md5sums=('8373cd729b12a821b28b483e3e9d253f'
+         'c46839bc0503f2dbec76282b8ab163bd')
