--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Geoffroy Carrier <geoffroy@archlinux.org>
 
 pkgname=bluez
-pkgver=4.92
-pkgrel=2
+pkgver=4.93
+pkgrel=1
 pkgdesc="Libraries and tools for the Bluetooth protocol stack"
 url="http://www.bluez.org/"
 arch=('i686' 'x86_64')
@@ -27,7 +27,7 @@ backup=(etc/bluetooth/{main,rfcomm,audio,network,input,serial}.conf
 source=("http://www.kernel.org/pub/linux/bluetooth/${pkgname}-${pkgver}.tar.bz2"
         'bluetooth.conf.d'
         'rc.bluetooth')
-md5sums=('33bb9a75239889c5ee5fbc666ad41c5c'
+md5sums=('f60027b7c3bf0f9d24b5935d5f51477e'
          '8f60a5eb9d84b9c64c478d63e1c24b10'
          'ca4c39eb4bb201bd2eacad01492cd735')
 
@@ -44,6 +44,7 @@ build() {
     --enable-tools \
     --enable-bccmd \
     --enable-dfutool \
+    --enable-hid2hci \
     --enable-hidd \
     --enable-pand \
     --enable-dund \
