--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=libzip
-pkgver=0.9.3
+pkgver=0.10
 pkgrel=1
 pkgdesc="A C library for reading, creating, and modifying zip archives"
 url="http://www.nih.at/libzip/index.html"
@@ -11,16 +11,20 @@ license=('GPL2')
 arch=('i686' 'x86_64')
 depends=('zlib')
 options=('!libtool')
-source=("http://www.nih.at/${pkgname}/${pkgname}-${pkgver}.tar.gz")
-md5sums=('e5fa5d0c5d2ad4c7a0c0fc7f5a1695b9')
+source=("http://www.nih.at/${pkgname}/${pkgname}-${pkgver}.tar.gz"
+        'fix-headers.patch')
+md5sums=('47cdfcbc08c8bea0b52fdee4bf591622'
+         '249395bd3a426c4c4e993e9d4753e1dd')
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
+
+  patch -p1 -i "${srcdir}/fix-headers.patch"
   ./configure --prefix=/usr
-  make || return 1
+  make
 }
 
 package() {
-  cd ${srcdir}/${pkgname}-${pkgver}
-  make DESTDIR=${pkgdir} install || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR=${pkgdir} install
 }
