upgpkg: translate-toolkit 1.9.0-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@122454 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/translate-toolkit/trunk/PKGBUILD
+++ b/translate-toolkit/trunk/PKGBUILD
@@ -1,10 +1,10 @@
-# $Id: PKGBUILD 82 2009-07-17 19:56:55Z aaron $
+# $Id$
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
 # Contributor: Hugo Doria <hugodoria at gmail.com>
 
 pkgname=translate-toolkit
-pkgver=1.8.1
+pkgver=1.9.0
 pkgrel=1
 pkgdesc="A toolkit to convert between various different translation formats, help process and validate localisations"
 arch=('any')
@@ -12,7 +12,7 @@ url="http://translate.sourceforge.net/wiki/toolkit/index"
 license=('GPL')
 depends=('bash' 'python-lxml')
 source=("http://downloads.sourceforge.net/translate/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('b4cae0700aa1c2aef7eb7f345365e6f1')
+md5sums=('6106bb27887a77c056bfa7d2fd89204d')
 
 package() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -21,5 +21,5 @@ package() {
     -e "s|#![ ]*/usr/bin/env python$|#!/usr/bin/env python2|" \
     $(find . -name '*.py')
 
-  python2 setup.py install --root="${pkgdir}"
+  python2 setup.py install --root="${pkgdir}" --optimize=1
 }
