--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,8 +6,8 @@
 # Contributor: Valentine Sinitsyn <e_val@inbox.ru>
 
 pkgname=networkmanager
-pkgver=0.8.998
-pkgrel=3
+pkgver=0.8.999
+pkgrel=1
 pkgdesc="Network Management daemon"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -22,10 +22,9 @@ optdepends=('modemmanager: for modem management service'
 options=('!libtool')
 backup=('etc/NetworkManager/NetworkManager.conf')
 install=networkmanager.install
-#http://ftp.gnome.org/pub/gnome/sources/NetworkManager/0.8/NetworkManager-${pkgver}.tar.bz2
-source=(ftp://ftp.archlinux.org/other/networkmanager/NetworkManager-${pkgver}-20110501.tar.xz
+source=(http://ftp.gnome.org/pub/gnome/sources/NetworkManager/0.8/NetworkManager-${pkgver}.tar.bz2
         NetworkManager.conf disable_set_hostname.patch)
-sha256sums=('f9362e5db1f700df927c5ce5a4089e67270a0ce8ca9ab1c5384ae93d2d8ec0e2'
+sha256sums=('fc2430e4babe1f53ac071746cd3f662f064a7d338f0e324f42f82fe9512968cd'
             '44b048804c7c0b8b3b0c29b8632b6ad613c397d0a1635ec918e10c0fbcdadf21'
             '1e4586991bc96ef004dc520c794047a336c54433e0bd4edc3879fb6e7ab0e553')
 
@@ -34,7 +33,6 @@ build() {
 
   patch -Np1 -i "${srcdir}/disable_set_hostname.patch"
 
-  ./autogen.sh
   ./configure \
     --prefix=/usr \
     --sysconfdir=/etc \
