--- a/network-manager-applet/trunk/PKGBUILD
+++ b/network-manager-applet/trunk/PKGBUILD
@@ -6,8 +6,8 @@
 # Contributor: Will Rea <sillywilly@gmail.com>
 
 pkgname=network-manager-applet
-pkgver=0.8.998
-pkgrel=2
+pkgver=0.8.999
+pkgrel=1
 pkgdesc="GNOME frontends to NetWorkmanager"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -19,13 +19,11 @@ makedepends=('intltool' 'gnome-bluetooth' 'gtk-doc')
 optdepends=('gnome-bluetooth: for PAN/DUN support')
 options=('!libtool')
 install=network-manager-applet.install
-source=(ftp://ftp.archlinux.org/other/networkmanager/$pkgname-$pkgver-20110501.tar.xz)
-#source=(http://ftp.gnome.org/pub/GNOME/sources/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
-sha256sums=('d83a489766b3f04c80444697f4aacbd6c8e53a9ea31d9a5348f165eb20504438')
+source=(http://ftp.gnome.org/pub/GNOME/sources/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
+sha256sums=('95249953fad924240fbe85ae7742405622c7edc3c6391dcb823346d5c37fd63b')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./autogen.sh
   ./configure --prefix=/usr --sysconfdir=/etc \
       --localstatedir=/var \
       --libexecdir=/usr/lib/networkmanager \
