--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,20 +2,20 @@
 # Maintainer: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=networkmanager-vpnc
-pkgver=0.8.998
+pkgver=0.8.999
 pkgrel=1
 pkgdesc="NetworkManager VPN plugin for vpnc"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.gnome.org/projects/NetworkManager/"
 depends=("networkmanager>=${pkgver}" 'vpnc' 'hicolor-icon-theme'
-         'gtk-update-icon-cache')
-makedepends=('intltool' 'gtk3' 'gconf' 'libgnome-keyring')
+         'gtk3' 'libgnome-keyring')
+makedepends=('intltool')
 optdepends=('network-manager-applet: GNOME frontends to NetWorkmanager')
 options=('!libtool')
 install=networkmanager-vpnc.install
 source=(http://ftp.gnome.org/pub/GNOME/sources/NetworkManager-vpnc/0.8/NetworkManager-vpnc-${pkgver}.tar.bz2)
-sha256sums=('996ae3b504ad49433955baa6467f828fd161a7fbe16c7080fdcab7f7c5b92fc6')
+sha256sums=('b3802070fb25872c9cc59d82bee27b6f8ec3c3feb36b5fd148a7da2b6371c3f3')
 
 build() {
   cd "${srcdir}/NetworkManager-vpnc-${pkgver}"
