--- a/networkmanager-pptp/trunk/PKGBUILD
+++ b/networkmanager-pptp/trunk/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=networkmanager-pptp
-pkgver=0.8.998
+pkgver=0.8.999
 pkgrel=1
 pkgdesc="NetworkManager VPN plugin for pptp "
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.gnome.org/projects/NetworkManager/"
-depends=("networkmanager>=${pkgver}" 'pptpclient')
-makedepends=('intltool' 'gtk3' 'gconf' 'libgnome-keyring')
+depends=("networkmanager>=${pkgver}" 'pptpclient' 'gtk3' 'libgnome-keyring')
+makedepends=('intltool')
 optdepends=('network-manager-applet: GNOME frontends to NetWorkmanager')
 options=('!libtool')
 install=networkmanager-pptp.install
 source=(http://ftp.gnome.org/pub/GNOME/sources/NetworkManager-pptp/0.8/NetworkManager-pptp-${pkgver}.tar.bz2)
-sha256sums=('2cc2093dd2d81b0c4f82d44a8589f8c867c6b88ef0d8801631bd417f8480b9b9')
+sha256sums=('81cfbe647c1d155a9bf0e7e4d4f3fad4b54dce50fd7162964e7a0f5c85fb2325')
 
 build() {
   cd "${srcdir}/NetworkManager-pptp-${pkgver}"
