--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,24 +2,22 @@
 # Maintainer: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=networkmanager-openconnect
-pkgver=0.8.998
+pkgver=0.8.999
 pkgrel=1
 pkgdesc="NetworkManager VPN integration for openconnect"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.gnome.org/projects/NetworkManager/"
 depends=("networkmanager>=${pkgver}" 'openconnect' 'dbus-glib' 'gconf' 'libgnome-keyring')
-makedepends=('intltool')
+makedepends=('intltool' 'namcap')
 optdepends=('network-manager-applet: GNOME frontends to NetWorkmanager')
 options=('!libtool')
 install=$pkgname.install
-source=(ftp://ftp.archlinux.org/other/networkmanager/NetworkManager-openconnect-${pkgver}-20110501.tar.xz)
-#source=(http://ftp.gnome.org/pub/GNOME/sources/NetworkManager-openconnect/0.8/NetworkManager-openconnect-${pkgver}.tar.bz2)
-sha256sums=('7f18ce15d985037c1bcf7208555182c296ab1a42a4dc33f78e5ceeb3492cdba5')
+source=(http://ftp.gnome.org/pub/GNOME/sources/NetworkManager-openconnect/0.8/NetworkManager-openconnect-${pkgver}.tar.bz2)
+sha256sums=('e191c71ff23268eac427609aeb0fb3df7bb1b6da2645bac84c62872cdfc218f5')
 
 build() {
   cd "${srcdir}/NetworkManager-openconnect-${pkgver}"
-  ./autogen.sh
   ./configure --prefix=/usr \
   	--sysconfdir=/etc \
 	--libexecdir=/usr/lib/networkmanager \
