--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,29 +3,36 @@
 # Contributor: Damir Perisa <damir@archlinux.org>
 
 pkgname=maxima
-pkgver=5.23.2
-pkgrel=3
+pkgver=5.24.0
+pkgrel=1
 pkgdesc="Maxima - a sophisticated computer algebra system"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://maxima.sourceforge.net"
 depends=('sbcl=1.0.47' 'texinfo' 'sh')
+makedepends=('python2')
 optdepends=('gnuplot: plotting capabilities' 'rlwrap: readline support via /usr/bin/rmaxima' 'tk: graphical xmaxima interface')
 # needs rebuild when bash changes version
 # needs a rebuild when sbcl changes version
 options=('!makeflags' '!zipman') # don't zip info pages or they won't work inside maxima
 install=maxima.install
 source=("http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz" "$pkgname.desktop")
-md5sums=('ae2f2eaca33de95636e36652ed281902'
-         '24aa81126fbb8b726854e5a80d4c2415')
-sha1sums=('f7300058faf730ce6cf63c18e59ec068df01b4a6'
+sha1sums=('13586c1221bb5f36067a4cce1e6d5fb31e44e41c'
           '4398ebb1ec85ccfa12f37516a56d60c26f74b18b')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
+
+  # set correct python executable to create docs
+  sed -i "s|${PYTHONBIN:-python}|python2|" doc/info/extract_categories.sh
+	
   ./configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info \
 	--libexecdir=/usr/lib --enable-sbcl --with-default-lisp=sbcl
   make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR=${pkgdir} install
   
   # install some freedesktop.org compatibility
