--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Eric Johnson <eric.archlinux.org>
 
 pkgname=libidn
-pkgver=1.19
+pkgver=1.21
 pkgrel=1
 pkgdesc="Implementation of the Stringprep, Punycode and IDNA specifications"
 url="http://www.gnu.org/software/libidn/"
@@ -15,8 +15,8 @@ makedepends=('pkgconfig')
 options=('!libtool')
 source=(http://ftp.gnu.org/gnu/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 install=libidn.install
-md5sums=('a45142126d28162014c995f969bdb5a8')
-
+sha1sums=('991d5d4e24118d7672d53ed692a8a6ab87212f8f')
+	
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   ./configure --prefix=/usr
