--- a/hdf5/trunk/PKGBUILD
+++ b/hdf5/trunk/PKGBUILD
@@ -1,10 +1,11 @@
+# $Id$
 # Maintainer: Ronald van Haren <ronald.archlinux.org>
 # Contributor: Stefan Husmann <stefan-husmann@t-online.de>
 # Contributor: damir <damir@archlinux.org>
 # Contributor: Tom K <tomk@runbox.com>
 
 pkgname=hdf5
-pkgver=1.8.5_patch1
+pkgver=1.8.6
 pkgrel=1
 arch=('i686' 'x86_64')
 pkgdesc="General purpose library and file format for storing scientific data"
@@ -14,7 +15,7 @@ depends=('zlib' 'sh')
 makedepends=('time')
 source=(ftp://ftp.hdfgroup.org/HDF5/current/src/${pkgname}-${pkgver/_/-}.tar.bz2)
 options=('!libtool')
-md5sums=('27308a145e6c208d57db3f6f2634a0f6')
+sha1sums=('348bd881c03a9568ac4ea9071833d6119c733757')
 
 build() {
   cd $srcdir/${pkgname}-${pkgver/_/-}
@@ -29,13 +30,13 @@ build() {
     --docdir=/usr/share/doc/hdf5/ \
     --with-pthread=/usr/lib/ \
     --disable-sharedlib-rpath
-  make || return 1
+  make
 }
 
 package() {
   cd $srcdir/${pkgname}-${pkgver/_/-}
 
-  make -j1 prefix=$pkgdir/usr install
+  make -j1 DESTDIR=${pkgdir} install
 
   install -d -m755 $pkgdir/usr/share/licenses/${pkgname}
   install -m644 $srcdir/${pkgname}-${pkgver/_/-}/COPYING \
