upgpkg: qt 4.7.3-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@122539 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qt/trunk/PKGBUILD
+++ b/qt/trunk/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgbase=qt
 pkgname=('qt' 'qt-private-headers')
-pkgver=4.7.2
-pkgrel=6
+pkgver=4.7.3
+pkgrel=1
 arch=('i686' 'x86_64')
 url='http://qt.nokia.com/'
 license=('GPL3' 'LGPL')
@@ -17,14 +17,12 @@ options=('!libtool')
 _pkgfqn="qt-everywhere-opensource-src-${pkgver}"
 source=("ftp://ftp.qt.nokia.com/qt/source/${_pkgfqn}.tar.gz"
         'assistant.desktop' 'designer.desktop' 'linguist.desktop'
-        'qtconfig.desktop'
-        'blacklist-fraudulent-comodo-certificates.patch')
-md5sums=('66b992f5c21145df08c99d21847f4fdb'
+        'qtconfig.desktop')
+md5sums=('49b96eefb1224cc529af6fe5608654fe'
          'fc211414130ab2764132e7370f8e5caa'
          '85179f5e0437514f8639957e1d8baf62'
          'f11852b97583610f3dbb669ebc3e21bc'
-         '6b771c8a81dd90b45e8a79afa0e5bbfd'
-         'af1259401447f4de59f1d4c2cbedafed')
+         '6b771c8a81dd90b45e8a79afa0e5bbfd')
 
 build() {
 	unset QMAKESPEC
