upgpkg: gnome-control-center 3.0.1.1-2 krb5 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@122550 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-control-center/trunk/PKGBUILD
+++ b/gnome-control-center/trunk/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=gnome-control-center
 pkgver=3.0.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="The Control Center for GNOME"
 arch=('i686' 'x86_64')
-depends=('gtk3' 'gsettings-desktop-schemas' 'gnome-menus' 'gnome-desktop' 'gnome-settings-daemon' 'upower' 'libgtop' 'cups-pk-helper' 'accountsservice' 'sound-theme-freedesktop')
+depends=('gtk3' 'gsettings-desktop-schemas' 'gnome-menus' 'gnome-desktop' 'gnome-settings-daemon' 'upower' 'libgtop' 'cups-pk-helper' 'accountsservice' 'sound-theme-freedesktop' 'krb5')
 optdepends=('mesa-demos: provides glxinfo for graphics information'
             'apg: adds password generation for user accounts')
 makedepends=('gnome-doc-utils' 'intltool' 'networkmanager')
