--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=evolution-data-server
 pkgver=3.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Central location for addressbook and calendar storage in the GNOME Desktop"
 arch=('i686' 'x86_64')
-depends=('libsoup' 'nss' 'libgnome-keyring' 'heimdal' 'libgweather' 'libical' 'db' 'libgdata')
+depends=('libsoup' 'nss' 'libgnome-keyring' 'krb5' 'libgweather' 'libical' 'db' 'libgdata')
 makedepends=('intltool' 'gperf' 'gobject-introspection')
 options=('!libtool')
 url="http://www.gnome.org"
