--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,13 +2,14 @@
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 pkgname=cifs-utils
 pkgver=4.9
-pkgrel=2
+pkgrel=3
 pkgdesc="CIFS filesystem user-space tools"
 arch=(i686 x86_64)
 url="http://wiki.samba.org/index.php/LinuxCIFS_utils"
 license=('GPL')
-depends=('libcap' 'keyutils' 'heimdal')
+depends=('libcap' 'keyutils' 'krb5' 'talloc')
 source=(ftp://ftp.samba.org/pub/linux-cifs/cifs-utils/$pkgname-$pkgver.tar.bz2)
+md5sums=('908d904e6b9e58f09f530de151a88ef8')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
@@ -23,4 +24,3 @@ package() {
   # set mount.cifs uid, to enable none root mounting form fstab
   chmod +s $pkgdir/sbin/mount.cifs
 }
-md5sums=('908d904e6b9e58f09f530de151a88ef8')
