--- a/gnome-vfs/trunk/PKGBUILD
+++ b/gnome-vfs/trunk/PKGBUILD
@@ -3,16 +3,13 @@
 
 pkgname=gnome-vfs
 pkgver=2.24.4
-pkgrel=2
+pkgrel=3
 pkgdesc="The GNOME Virtual File System"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('fam' 'gconf' 'bzip2' 'avahi' 'smbclient' 'gnome-mime-data' 'heimdal' 'gnutls')
+depends=('fam' 'gconf' 'bzip2' 'avahi' 'smbclient' 'gnome-mime-data' 'krb5' 'gnutls')
 makedepends=('pkgconfig' 'intltool' 'gtk-doc' 'gnome-common')
-options=('!libtool' '!emptydirs' '!makeflags')
-conflicts=(gnome-vfs-samba)
-provides=(gnome-vfs-samba)
-replaces=(gnome-vfs-samba gnome-vfs-extras)
+options=('!libtool' '!emptydirs')
 url="http://www.gnome.org"
 install=gnome-vfs.install
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/gnome-vfs-${pkgver}.tar.bz2
@@ -36,6 +33,10 @@ build() {
       --enable-avahi --disable-howl \
       --disable-openssl --enable-gnutls
   make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
   make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install
 
   install -d -m755 "${pkgdir}/usr/share/gconf/schemas"
