--- a/libgnomecups/trunk/PKGBUILD
+++ b/libgnomecups/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=libgnomecups
 pkgver=0.2.3
-pkgrel=7
+pkgrel=8
 pkgdesc="GNOME cups library"
 arch=(i686 x86_64)
 license=('LGPL' 'GPL')
 url="http://www.gnome.org"
-depends=('libcups>=1.3.8-2' 'glib2>=2.16.4' 'heimdal>=1.3.1' 'gnutls>=2.4.1')
+depends=('libcups' 'glib2' 'krb5' 'gnutls')
 makedepends=('perlxml')
 options=(!libtool)
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/0.2/${pkgname}-${pkgver}.tar.bz2
@@ -20,8 +20,12 @@ md5sums=('dc4920c15c9f886f73ea74fbff0ae48b'
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   # This avoids generating huge 'IPP request failed with status 1030' lines
-  patch -Np1 -i ${srcdir}/libgnomecups_0.2.3-ignore-ipp-not-found.patch || return 1
-  ./configure --prefix=/usr || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+  patch -Np1 -i ${srcdir}/libgnomecups_0.2.3-ignore-ipp-not-found.patch
+  ./configure --prefix=/usr
+  make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 }
