--- a/libgnomeprint/trunk/PKGBUILD
+++ b/libgnomeprint/trunk/PKGBUILD
@@ -3,11 +3,11 @@
 
 pkgname=libgnomeprint
 pkgver=2.18.8
-pkgrel=1
+pkgrel=2
 pkgdesc="Printing routines for GNOME"
 arch=(i686 x86_64)
 license=('LGPL' 'GPL')
-depends=('pango>=1.28.1' 'libart-lgpl>=2.3.21' 'libxml2>=2.7.7' 'libgnomecups>=0.2.3-4' 'heimdal>=1.3.3' 'gnutls>=2.8.6')
+depends=('pango' 'libart-lgpl' 'libxml2' 'libgnomecups' 'krb5' 'gnutls')
 makedepends=('intltool' 'pkgconfig')
 replaces=('libgnomeprint-cups')
 conflicts=('libgnomeprint-cups')
@@ -20,5 +20,9 @@ build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --disable-static
   make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
   make DESTDIR="${pkgdir}" install
 }
