--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,17 +2,18 @@
 # Maintainer: Ionut Biru <ibiru@archlinux.org>
 pkgname=modemmanager
 _realname=ModemManager
-pkgver=0.4
+pkgver=0.4.996
 pkgrel=1
 pkgdesc="Mobile broadband modem management service"
 arch=('i686' 'x86_64')
 url="http://cgit.freedesktop.org/ModemManager/ModemManager/"
 license=('GPL2')
-depends=('dbus-glib>=0.86' 'udev>=151' 'ppp>=2.4.5')
+depends=('dbus-glib' 'udev' 'ppp')
 makedepends=('intltool')
 options=('!libtool')
 source=(http://download.gnome.org/sources/${_realname}/0.4/${_realname}-${pkgver}.tar.bz2)
-sha256sums=('8b5415ae8597726f82e9fd09237c02b5c8af7e9f4fc4cba00f9fe183cc2c6c5f')
+optdepends=('usb_modeswitch: install if your modem shows up as a storage drive')
+sha256sums=('4e82b8ef5f5e5e737212b8d077a59ac9e1fb21b65e8df98005b2beaad265c16b')
 
 build() {
   cd "$srcdir/${_realname}-${pkgver}"
@@ -20,6 +21,10 @@ build() {
    	--sysconfdir=/etc \
 	--localstatedir=/var \
 	--disable-static
-  make || return 1
-  make DESTDIR="$pkgdir" install || return 1
+  make
+}
+
+package() {
+  cd "$srcdir/${_realname}-${pkgver}"
+  make DESTDIR="$pkgdir" install
 }
