--- a/kdeedu/trunk/PKGBUILD
+++ b/kdeedu/trunk/PKGBUILD
@@ -25,23 +25,26 @@ pkgname=('kdeedu-blinken'
          'kdeedu-parley'
          'kdeedu-rocs'
          'kdeedu-step')
-pkgver=4.6.2
-pkgrel=2
+pkgver=4.6.3
+pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeedu')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'ocaml' 'facile' 'cfitsio' 'gpsd'
 	'kdebase-runtime' 'libqalculate' 'gsl' 'boost' 'libindi' 'r' 'libspectre'
-	'python2' 'docbook-xsl' 'avogadro')
+	'python2' 'avogadro')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
-        'gpsd-2.96.patch')
+        'gpsd-2.96.patch'
+        'cmake-build-fixes-2.diff')
 sha1sums=('7c94a10f5c17237dcd5c348a8ac129973934cf05'
-          'fd6b6b81945d951bb6ad0bb735df33c11bb2008e')
+          'fd6b6b81945d951bb6ad0bb735df33c11bb2008e'
+          '2c2f3985734a47d6e0f5142604e197fb050ff547')
 
 build() {
     cd ${srcdir}/${pkgbase}-${pkgver}
     patch -Np1 -i ${srcdir}/gpsd-2.96.patch
+    patch -p1 -i ${srcdir}/cmake-build-fixes-2.diff
 
     cd ${srcdir}
 	mkdir build
