--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,12 +3,13 @@
 
 pkgname='cronie'
 pkgver=1.4.7
-pkgrel=7
+pkgrel=8
 pkgdesc='Daemon that runs specified programs at scheduled times and related tools'
 url='https://fedorahosted.org/cronie/'
 license=('custom:BSD')
 arch=('i686' 'x86_64')
 depends=('pam' 'bash' 'run-parts')
+optdepends=('smtp-server: sending cron job output via email')
 
 source=("https://fedorahosted.org/releases/c/r/${pkgname}/${pkgname}-${pkgver}.tar.gz"
         'cron.deny'
