--- a/gcin/trunk/PKGBUILD
+++ b/gcin/trunk/PKGBUILD
@@ -4,21 +4,21 @@
 # Contributor: damir <damir@archlinux.org>
 
 pkgname=gcin
-pkgver=1.6.1
-pkgrel=2
+pkgver=1.6.3
+pkgrel=1
 pkgdesc='Input method server supporting various input methods'
 arch=('i686' 'x86_64')
 license=('LGPL')
-url='http://cle.linux.org.tw/gcin/download/'
+url='http://cle.linux.org.tw/trac/'
 depends=('gtk2' 'libxtst')
 makedepends=('qt' 'gtk3' 'anthy')
 optdepends=('qt: support for qt4 input method'
             'gtk3: support for gtk3 input method'
             'anthy: support for anthy input method')
-source=("${url}${pkgname}-${pkgver}.tar.bz2"
+source=("http://www.csie.nctu.edu.tw/~cp76/gcin/download/${pkgname}-${pkgver}.tar.bz2"
         'fix_x86_64_libdir.patch'
         'fix_qt4_paths.patch')
-sha1sums=('acbfffbaf7eccd32ef251493e8c03dd126023b51'
+sha1sums=('50522908d3e64319baafb5317c0b4327bbe0fb18'
           'e5c113e50420bf4750f5547641df6ec4b7e437e0'
           '16d004424caed541d5baaa6874f708b1c138ab08')
 
