--- a/racket/trunk/PKGBUILD
+++ b/racket/trunk/PKGBUILD
@@ -2,28 +2,28 @@
 # Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=racket
-pkgver=5.1
+pkgver=5.1.1
 pkgrel=1
 pkgdesc="PLT Racket (a variant of Scheme) Environment"
 arch=('i686' 'x86_64')
 url="http://racket-lang.org/"
 license=('LGPL')
-depends=('gtk2' 'libjpeg' 'desktop-file-utils')
+depends=('gtk2' 'libjpeg' 'libffi' 'desktop-file-utils')
+makedepends=('gsfonts')
 provides=('drscheme')
 conflicts=('drscheme')
 replaces=('drscheme')
 options=('!strip')
 install=racket.install
 source=(http://download.racket-lang.org/installers/${pkgver}/racket/${pkgname}-${pkgver}-src-unix.tgz \
-        drracket.desktop jpeg-version.patch)
-md5sums=('c3b0bffb998ad530c06512d045a59f15' '9223c9736ead677431542b41271c7b3c'\
-         '0aae72b6f19963c569d20fa8793482e1')
-sha1sums=('6c314a71bab77eb48efad8f6c9fa597b6a5a305d' 'a20808f6b250225704856f82a544681a962a299d'\
-         'afa13f3ef66f5434b209f545f82545a869ada2b2')
+        drracket.desktop)
+md5sums=('26d6b320218497dba71630b9ad4dcf59'
+         '9223c9736ead677431542b41271c7b3c')
+sha1sums=('be339495aef3334530ea8fc63ef4014ad8a4b0b2'
+          'a20808f6b250225704856f82a544681a962a299d')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}/src"
-  (cd ..; patch -p1 -i "${srcdir}/jpeg-version.patch")
   ./configure --prefix=/usr
   make
 }
