upgpkg: lm_sensors 3.3.0-2 Moved rrdtool to optdepends to remove X libs dependency for servers (close FS#23328)
git-svn-id: file:///srv/repos/svn-packages/svn@122622 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/lm_sensors/trunk/PKGBUILD
+++ b/lm_sensors/trunk/PKGBUILD
@@ -3,12 +3,14 @@
 
 pkgname=lm_sensors
 pkgver=3.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Collection of user space tools for general SMBus access and hardware monitoring"
 arch=('i686' 'x86_64')
 url="http://www.lm-sensors.org/"
 license=('GPL' 'LGPL')
-depends=('perl' 'sysfsutils' 'rrdtool')
+depends=('perl' 'sysfsutils')
+makedepends=('rrdtool')
+optdepends=('rrdtool: for logging with sensord')
 backup=('etc/sensors3.conf' 'etc/conf.d/healthd' 'etc/conf.d/sensord')
 options=('!emptydirs')
 source=(http://dl.lm-sensors.org/lm-sensors/releases/lm_sensors-${pkgver}.tar.bz2 \
