--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,12 +3,14 @@
 
 pkgname=lm_sensors
 pkgver=3.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Collection of user space tools for general SMBus access and hardware monitoring"
 arch=('i686' 'x86_64')
 url="http://www.lm-sensors.org/"
 license=('GPL' 'LGPL')
-depends=('perl' 'sysfsutils' 'rrdtool')
+depends=('perl' 'sysfsutils')
+makedepends=('rrdtool')
+optdepends=('rrdtool: for logging with sensord')
 backup=('etc/sensors3.conf' 'etc/conf.d/healthd' 'etc/conf.d/sensord')
 options=('!emptydirs')
 source=(http://dl.lm-sensors.org/lm-sensors/releases/lm_sensors-${pkgver}.tar.bz2 \
