make linux-atm an optional dep: FS#23059
git-svn-id: file:///srv/repos/svn-packages/svn@122627 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/iproute2/trunk/PKGBUILD
+++ b/iproute2/trunk/PKGBUILD
@@ -9,7 +9,9 @@ pkgdesc="IP Routing Utilities"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.linux-foundation.org/en/Net:Iproute2"
-depends=('linux-atm' 'perl')
+depends=('perl')
+makedepends=('linux-atm')
+optdepends=('linux-atm: ATM support')
 provides=('iproute')
 conflicts=('iproute')
 replaces=('iproute')
