--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -9,7 +9,9 @@ pkgdesc="IP Routing Utilities"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.linux-foundation.org/en/Net:Iproute2"
-depends=('linux-atm' 'perl')
+depends=('perl')
+makedepends=('linux-atm')
+optdepends=('linux-atm: ATM support')
 provides=('iproute')
 conflicts=('iproute')
 replaces=('iproute')
