--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,18 +5,18 @@
 
 pkgname=openssh
 pkgver=5.8p2
-pkgrel=2
+pkgrel=3
 pkgdesc='Free version of the SSH connectivity tools'
 arch=('i686' 'x86_64')
 license=('custom:BSD')
 url='http://www.openssh.org/portable.html'
 backup=('etc/ssh/ssh_config' 'etc/ssh/sshd_config' 'etc/pam.d/sshd' 'etc/conf.d/sshd')
-depends=('tcp_wrappers' 'krb5' 'libedit')
+depends=('tcp_wrappers' 'heimdal' 'libedit')
 source=("ftp://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/${pkgname}-${pkgver}.tar.gz"
         'sshd.confd'
         'sshd.pam'
         'sshd')
-sha1sums=('e610270e0c5484fb291cd81bbcbefbeb5e391a62'
+sha1sums=('64798328d310e4f06c9f01228107520adbc8b3e5'
           'ec102deb69cad7d14f406289d2fc11fee6eddbdd'
           '660092c57bde28bed82078f74011f95fc51c2293'
           '6b7f8ebf0c1cc37137a7d9a53447ac8a0ee6a2b5')
