prepare 3.4 branch builds; fix i686 installation, i686 build is still broken
git-svn-id: file:///srv/repos/svn-packages/svn@122652 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libreoffice/trunk/PKGBUILD
+++ b/libreoffice/trunk/PKGBUILD
@@ -329,7 +329,7 @@ package_libreoffice() {
 	
 	# workaround broken make $DESTDIR install :(
 #	install -dm755 ${pkgdir}/usr/lib/libreoffice
-#	mv instsetoo_native/unxlngx6.pro/LibreOffice/native/install/LibO_3.4.0beta3_Linux_x86-64_install_en-US/linux-2.6-x86_64/buildroot/opt/libreoffice/* ${pkgdir}/usr/lib/libreoffice
+#	mv instsetoo_native/unxlng*/LibreOffice/native/install/LibO_3.4.0beta3_Linux_x86-64_install_en-US/linux-2.6-x86_64/buildroot/opt/libreoffice/* ${pkgdir}/usr/lib/libreoffice
 #	chmod -R +w ${pkgdir}/usr/lib/libreoffice
 	
 	# fix missing desktop integration
@@ -369,7 +369,7 @@ package_libreoffice() {
 	sed -i -e 's/Icon=libreoffice-/Icon=/' ${pkgdir}/usr/share/applications/*.desktop
 
 	# add missing mimetype file
-	install -m644 ${srcdir}/build/sysui/unxlngx6.pro/misc/libreoffice/openoffice.org.xml ${pkgdir}/usr/share/mime/packages/libreoffice.xml
+	install -m644 ${srcdir}/build/sysui/unxlng*/misc/libreoffice/openoffice.org.xml ${pkgdir}/usr/share/mime/packages/libreoffice.xml
 
 	# put configuration files into place
 	install -dm755 ${pkgdir}/etc/libreoffice
@@ -422,7 +422,7 @@ package_libreoffice-sdk() {
 
 #	cd ${srcdir}/build
 #	install -dm755 ${pkgdir}/usr/lib/libreoffice
-#	mv instsetoo_native/unxlngx6.pro/LibreOffice_SDK/native/install/LibO-SDK_3.4beta3_Linux_x86-64_install_en-US/linux-2.6-x86_64/buildroot/opt/libreoffice/* ${pkgdir}/usr/lib/libreoffice
+#	mv instsetoo_native/unxlng*/LibreOffice_SDK/native/install/LibO-SDK_3.4beta3_Linux_x86-64_install_en-US/linux-2.6-x86_64/buildroot/opt/libreoffice/* ${pkgdir}/usr/lib/libreoffice
 
 	cd ${pkgdir}/usr/lib/libreoffice/basis3.4/sdk
 #	for file in setsdkenv_unix.csh setsdkenv_unix.sh ; do
