--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,11 +3,11 @@
 
 pkgname=nautilus
 pkgver=3.0.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="The GNOME shell and file manager"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('libexif' 'gnome-desktop' 'exempi' 'gtk3' 'hicolor-icon-theme' 'gvfs' 'desktop-file-utils' 'gsettings-desktop-schemas' 'shared-mime-info')
+depends=('libexif' 'gnome-desktop' 'exempi' 'gtk3' 'hicolor-icon-theme' 'gvfs' 'desktop-file-utils' 'gsettings-desktop-schemas' 'shared-mime-info' 'gnome-themes-standard')
 makedepends=('intltool' 'gobject-introspection')
 replaces=('gnome-volume-manager')
 url="http://www.gnome.org"
